--- a/ui/assets/scss/components/_index.scss
+++ b/ui/assets/scss/components/_index.scss
@@ -1,5 +1,5 @@
-@import "header";
-@import "footer";
-@import "card";
-@import "dropdown";
-@import "table";
+@import 'header';
+@import 'footer';
+@import 'card';
+@import 'dropdown';
+@import 'table';
